# ChangeLog for x11-libs/gtk+
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk+/ChangeLog,v 1.87 2004/03/18 18:05:02 foser Exp $

*gtk+-2.4.0 (18 Mar 2004)

  18 Mar 2004; foser <foser@gentoo.org> gtk+-2.4.0.ebuild :
  New release
  Remove incorporated patches
  Removed wm patch, it's broken
  Correct license
  
  06 Mar 2004; Stephen P. Becker <geoman@gentoo.org> gtk+-1.2.10-r10.ebuild,
  gtk+-2.2.4-r1.ebuild:
  Added ~mips keyword.

*gtk+-1.2.10-r11 (05 Feb 2004)

  05 Feb 2004; <spider@gentoo.org> gtk+-1.2.10-r11.ebuild:
  Minor change to DEPEND, adding an RDEPEND to get intltool out of the RDEPEND
  set. this deserves a revbump only to make sure that packages get updated.

  07 Dec 2003; foser <foser@gentoo.org> gtk+-1.2.10-r10.ebuild :
  Fix sysconfdir to /etc to fix gtkrc problems described in #34279

  14 Nov 2003; Aron Griffis <agriffis@gentoo.org> gtk+-1.2.10-r10.ebuild:
  Stable on ia64

  08 Nov 2003; Todd Sunderlin <todd@gentoo.org> gtk+-2.2.4-r1.ebuild:
  added sparc keyword

  20 Oct 2003; Aron Griffis <agriffis@gentoo.org> gtk+-2.2.4-r1.ebuild:
  Stable on alpha

  08 Oct 2003; foser <foser@gentoo.org> gtk+-2.2.4-r1.ebuild :
  Added patch to fix notification area, submitted by <pat@engsoc.org>

  06 Oct 2003; Mike Gardiner <obz@gentoo.org> gtk+-2.2.4-r1.ebuild:
  Marked stable on x86

  23 Sep 2003; Bartosch Pixa <darkspecter@gentoo.org> gtk+-2.2.4-r1.ebuild:
  set ppc in keywords

*gtk+-2.2.4-r1 (10 Sep 2003)

  16 Nov 2003; Guy Martin <gmsoft@gentoo.org> gtk+-2.2.4-r1.ebuild :
  Added hppa to KEYWORDS.

  10 Sep 2003; foser <foser@gentoo.org> gtk+-2.2.4-r1.ebuild :
  Remove USE debug support, the not hardcoded disabling of debugging support 
  should fix a lot of problems. Rev bump to propagate.

*gtk+-2.2.4 (07 Sep 2003)

  07 Sep 2003; foser <foser@gentoo.org> gtk+-2.2.4.ebuild :
  New bugfix release

*gtk+-2.2.3 (27 Aug 2003)
