@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/gtk+
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk+/ChangeLog,v 1.87 2004/03/18 18:05:02 foser Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk+/ChangeLog,v 1.88 2004/03/30 05:22:29 spyderous Exp $
+
+  30 Mar 2004; Donnie Berkholz <spyderous@gentoo.org>; gtk+-2.2.4-r1.ebuild,
+  gtk+-2.4.0.ebuild:
+  Change x11-base/xfree dependency to virtual/x11. Everyone on xfree should be
+  on 4.3.0-r3 or greater by now, so #20407 shouldn't be an issue.
 
 *gtk+-2.4.0 (18 Mar 2004)
 
